Revision history for Business::Shipping
=======================================

2.05  

  USPS_Online
  
    * Change to protocol V3, with backwards-compatibility for version-2 
      responses. 
    
    * Document new International sevice names:
        Global Express Guaranteed
        Express Mail International (EMS)
        Express Mail International (EMS) Flat Rate Envelope
        Priority Mail International
        Priority Mail International Flat Rate Box
        Priority Mail International Flat Rate Envelope
        First Class Mail International
        	
    * Perl style changes
    
    * Improve error reporting in tests. Disable protocol V2 tests now that V3
      is in use. Update the letter service test.
      
    * Fix several occurences of: Use of uninitialized value in concatenation (.)
      or string at .../lib/site_perl/5.8.8/XML/DOM.pm line 483. There are 
      several more that need to be fixed.
      
  UPS_Online
  
    * Disable a few tests until they can be fixed.
    
  Interchange UserTag
  
    * New feature to display all shipping options with prices at once.
      
    * Templatable for <select> list or any other design.
    
    * Tests for the new feature.


2.04  Unreleased


  USPS_Online and UPS_Online changes by Rusty Conover <rconover@infogears.com>:

    * Rename tracking modules so they match the path, 
      Business::Shipping::UPS_Online::Tracking and Business::Shipping::USPS_Online::Tracking.

    * Fix tracking so it works with multiple tracking its, Class::MethodMaker 2.0 
      is a little tricky about this, you can't pass an arrayref on the init for 
      the tracking object, you need to pass it in a second call.  Update example code.

    * Fix caching for tracking so it actually works, rather then failing with an error 
      on Class::MethodMaker 2.x.

    * Fix caching for tracking so it doesn't overwrite cached versions of results on 
      every retrieval, causing the cache entries to never expire.
